--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,16 +1,19 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);
-
+body {
+  background: linear-gradient(90deg, #4af0ab, #3d8ec4);
+  background-repeat: repeat-y;
+}
 .filters {
-  background: white;
   width: 100%;
   li {
     display: inline-block;
-    max-width: 80px;
+    max-width: 120px;
     padding: 3px;
     label {
       display: block;
-      font-size: 12px;
-      font-weight: 900;
+      font-size: 14px;
+      font-family: "Open Sans", sans-serif;
+      font-weight: 600;
     }
     input {
       width: 100%;
@@ -45,7 +48,7 @@
     width: 100px;
     height: 100px;
     margin: 0 0 0 -55px;
-    border: 5px solid #fff;
+    border: 2px solid #fff;
     border-radius: 50%;
   }
   h1,
